backport: re PR rtl-optimization/54472 (ICE (spill_failure): unable to find a register to spill in class 'AREG' with -O -fschedule-insns -fselective-scheduling)

2013-04-04  Andrey Belevantsev  <abel@ispras.ru>

        Backport from mainline
        2012-11-09  Andrey Belevantsev  <abel@ispras.ru>

        PR rtl-optimization/54472
        * sel-sched-ir.c (has_dependence_note_reg_set): Handle implicit sets.
        (has_dependence_note_reg_clobber,
        as_dependence_note_reg_use): Likewise.

        2012-11-09  Andrey Belevantsev  <abel@ispras.ru>

        PR rtl-optimization/54472
        * gcc.dg/pr54472.c: New test.

From-SVN: r197483